# simulator_workspace

./: .gitignore  README.md  startSimulator.sh  stopSimulator.sh
libraries/CMakeModules/: MotionPlanning.cmake
libraries/core/lib_motion_planning/: CMakeLists.txt
libraries/core/lib_motion_planning/configs/: PlannerConfig.hpp
libraries/core/lib_motion_planning/types/: EgoVehicle.hpp  LaneInfo.hpp  OverallInfo.hpp  RoadInfo.hpp  Vehicle.hpp
src/: CMakeLists.txt
src/collision_detector/: CMakeLists.txt  package.xml
src/libraries_builder/: CMakeLists.txt  package.xml
src/motion_planner/: CMakeLists.txt  MotionPlanning.cmake  package.xml
src/motion_planner/include/motion_planner/: Planner.hpp  PlannerConfig.hpp  PlannerROSInterface.hpp  PlannerVisualizer.hpp  Pose2D.hpp  VehState.hpp  Vehicle.hpp
src/motion_planner/launch/: motion_planner.launch  motion_planner_params.yaml
src/motion_planner/lib/algorithm/: NonholonomicAStar.cpp  NonholonomicAStar.hpp  NonholonomicParallelAStar.cpp  NonholonomicParallelAStar.hpp  parallel_cost_calculations.cu  parallel_cost_calculations.cuh  serial_cost_calculations.cpp  serial_cost_calculations.hpp
src/motion_planner/lib/algorithm/astar/: Node.hpp  NonholonomicAStar.cpp  NonholonomicAStar.hpp
src/motion_planner/lib/configs/: PlannerConfig.hpp
src/motion_planner/lib/helper_functions/: boost_geometry_helper_functions.hpp  motion_planning_helper_functions.hpp  safety_helper_functions.hpp
src/motion_planner/lib/types/: EgoVehicle.hpp  LaneInfo.hpp  MPInfo.hpp  OverallInfo.hpp  Pose2D.hpp  RoadInfo.hpp  Vec2D.hpp  Vehicle.hpp
src/motion_planner/src/: Planner.cpp  PlannerROSInterface.cpp  PlannerVisualizer.cpp  main.cpp
src/simulator/: CMakeLists.txt  package.xml
src/simulator/launch/: simulator.launch  simulator_params.yaml
src/simulator/resources/: environments
src/simulator/resources/environments/: two_lane_straight_two_cars.yaml  two_lane_two_cars_y_inverted_meters.yaml  two_lane_y_inverted_meters_static_traffic.yaml
src/simulator/rviz/: sim.rviz  sim_path.rviz
src/simulator/src/: run_simulation.py  simulator.py  simulator_config.py  simulator_helper_functions.py  traffic_generation_functions.py
src/simulator/src/helper_classes/: pose.py  road_info.py  simulator_config.py  vehicle.py
src/simulator_msgs/: CMakeLists.txt  package.xml
src/simulator_msgs/msg/: EgoVehicle.msg  TrafficVehicles.msg  VehState.msg  Vehicle.msg
src/vehicle_description/: CMakeLists.txt  package.xml
src/vehicle_description/launch/: vehicle_description_params.yaml
src/vehicle_details/: CMakeLists.txt  package.xml
src/vehicle_details/launch/: vehicle_details.launch  vehicle_details_params.yaml
utilities/pygame_sim_environment_generator/: road_generator.py  traffic_scene_generator.py
utilities/pygame_sim_environment_generator/generated_environments/: curved.yaml  curved_no_traffic.yaml  three_lane_300m_long.yaml  three_lane_lost_cargo_with_adj_traffic.yaml  two_lane_straight.json  two_lane_straight.yaml  two_lane_straight_two_cars.yaml  two_lane_two_cars_y_inverted_meters.yaml  two_lane_y_inverted_meters.yaml  two_lane_y_inverted_meters_no_traffic.yaml  two_lane_y_inverted_meters_static_traffic.yaml
