<?xml version="1.0"?>
<package format="2">
  <name>libraries_builder</name>
  <version>0.0.0</version>
  <description>The vehicle_description package to publish vehicle related information</description>

  <maintainer email="amsahasrabudhe@wpi.edu">Ashwin Sahasrabudhe</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
