<?xml version="1.0"?>
<package format="2">
  <name>libraries_builder</name>
  <version>1.0.0</version>
  <description>Package to build libraries from separate folder</description>

  <maintainer email="amsahasrabudhe@wpi.edu">Ashwin Sahasrabudhe</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
