<?xml version="1.0"?>
<package format="2">
  <name>motion_planner</name>
  <version>0.0.0</version>
  <description>The motion_planner package</description>

  <maintainer email="amsahasrabudhe@wpi.edu">ashwin</maintainer>

  <license>GPLv3</license>

  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libraries_builder</build_depend>
  <depend>message_runtime</depend>
  <depend>roscpp</depend>
  <depend>roslaunch</depend>
  <depend>simulator_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
