<?xml version="1.0"?>
<package format="2">
  <name>simulator</name>
  <version>0.0.0</version>
  <description>The car simulator package</description>

  <maintainer email="amsahasrabudhe@wpi.edu">Ashwin Sahasrabudhe</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>simulator_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>

</package>
