<package format="2">
  <name>simulator_msgs</name>
  <version>0.0.1</version>
  <description> Simulator related messages including control and feedback related msgs </description>

  <maintainer email="amsahasrabudhe@wpi.edu">Ashwin Sahasrabudhe</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

</package>